调整UI、取消push自动构建,更新README。

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
 name: Build And Release
 
 on:
-  push:
-    branches:
-      - main
-    paths:
-      - '**.yml'
+  # push:
+  #   branches:
+  #     - main
+  #   paths:
+  #     - '**.yml'
   workflow_dispatch:
     inputs:
       release:
