--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ on:
       version:
         description: 'Release version'
         required: true
-        default: '2024.12.17.v1'
+        default: '2024.12.24.v1'
       body:
         description: 'Release body text'
         required: true
@@ -46,7 +46,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.11.9
+        python-version: 3.13.1
 
     - name: Install Pyinstaller
       run: |
@@ -55,8 +55,14 @@ jobs:
 
     - name: Build the executables
       run: |
-        pyinstaller -w --onefile --name Epub_Tool_TKUI Epub_Tool_TKUI.py
-        pyinstaller --onefile --name Epub_Tool_Console Epub_Tool_Console.py
+        if [[ "${{ matrix.os }}" != "windows-latest" ]]; then
+          pyinstaller --onefile --name Epub_Tool_TKUI Epub_Tool_TKUI.py
+          pyinstaller --onefile --name Epub_Tool_Console Epub_Tool_Console.py
+        else
+          pyinstaller -w --onefile --name Epub_Tool_TKUI Epub_Tool_TKUI.py
+          pyinstaller --onefile --name Epub_Tool_Console Epub_Tool_Console.py
+        fi
+      shell: bash
 
     - name: Rename artifacts with OS prefix (Linux and macOS)
       if: matrix.os != 'windows-latest'
