--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,13 +20,13 @@ on:
       body:
         description: 'Release body text'
         required: true
-        default: '详情请查看更新日志；Epub_Tool_TKUI为可视化程序，Epub_Tool_Console为命令行程序。'
+        default: '详情请查看更新日志；Epub_Tool_TKUI为可视化程序，不再支持命令行程序。有需要请直接下载python执行源码。'
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
+      matrix: # os: [ubuntu-latest, macos-latest, windows-latest] 暂时去除Ubuntu系统
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v4
@@ -55,11 +55,14 @@ jobs:
 
     - name: Build the executables
       run: |
+        if [ "${{ matrix.os }}" == "macos-latest" ]; then
+          pyinstaller -w -i ./img/icon.icns Epub_Tool_TKUI.py -n Epub_Tool_TKUI;
+        else
           pyinstaller -w -F -i ./img/icon.ico  Epub_Tool_TKUI.py -n Epub_Tool_TKUI;
-          pyinstaller -F -i ./img/icon.ico --name Epub_Tool_Console Epub_Tool_Console.py
+        fi
       shell: bash
 
-    - name: Rename artifacts with OS prefix (macOS)
+    - name: Rename artifacts with OS prefix (macOS) # Epub_Tool_TKUI.app为文件夹，zip压缩
       if: matrix.os == 'macos-latest'
       run: |
         cd ./dist
@@ -73,13 +76,13 @@ jobs:
       shell: bash
 
     # 无Ubuntu系统，暂时不知道Ubuntu版本下打包的可执行文件是什么格式、是否可用
-    - name: Rename artifacts with OS prefix (Ubuntu)
-      if: matrix.os == 'macos-latest'
-      run: |
-        for file in dist/*; do
-          mv "$file" "dist/${{ runner.os }}_$(basename "$file")"
-        done
-      shell: bash
+    # - name: Rename artifacts with OS prefix (Ubuntu)
+    #   if: matrix.os == 'ubuntu-latest'
+    #   run: |
+    #     for file in dist/*; do
+    #       mv "$file" "dist/${{ runner.os }}_$(basename "$file")"
+    #     done
+    #   shell: bash
 
     - name: Rename artifacts with OS prefix (Windows)
       if: matrix.os == 'windows-latest'
