更新构建工作流中的默认描述，添加更新日志链接；创建更新日志文件并迁移历史记录

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,11 @@ on:
       version:
         description: 'Release version'
         required: true
-        default: '2025.03.01.v1'
+        default: '2025.MM.DD.v1'
       body:
         description: 'Release body text'
         required: true
-        default: '详情请查看更新日志；Epub_Tool_TKUI为可视化程序，不再支持命令行程序。有需要请直接下载python执行源码。'
+        default: '详情请查看[更新日志](https://github.com/cnwxi/epub_tool/blob/main/CHANGELOG.md)；Epub_Tool_TKUI为可视化程序，不再支持命令行程序。有需要请直接下载python执行源码。'
 
 jobs:
   build:
@@ -38,15 +38,15 @@ jobs:
           echo "TAG=${{ github.event.inputs.version }}" >> $GITHUB_ENV
           echo "BODY=${{ github.event.inputs.body }}" >> $GITHUB_ENV
         else
-          echo "TAG=$(date +'%Y.%m.%d.v2')" >> $GITHUB_ENV
-          echo "BODY=详情请查看更新日志；Epub_Tool_TKUI为可视化程序，Epub_Tool_Console为命令行程序。" >> $GITHUB_ENV
+          echo "TAG=$(date +'%Y.%m.%d.v1')" >> $GITHUB_ENV
+          echo "BODY=详情请查看[更新日志](https://github.com/cnwxi/epub_tool/blob/main/CHANGELOG.md)；Epub_Tool_TKUI为可视化程序，不再支持命令行程序。有需要请直接下载python执行源码。" >> $GITHUB_ENV
         fi
       shell: bash
 
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: 3.13.1
+        python-version: 3.12.2
 
     - name: Install Pyinstaller
       run: |
