UI更新：界面布局调整，添加拖拽功能，添加简要使用说明。

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ test
 epub_tool.spec
 log.txt
 result.txt
-utils/__pycache__/
 log_file
 epub_tool_TKUI.spec
 .DS_Store
 *.epub
+.vscode
+__pycache__/
