--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix: # os: [ubuntu-latest, macos-latest, windows-latest] 暂时去除Ubuntu系统
-        os: [macos-latest, windows-latest]
+      matrix: # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v4
     
@@ -86,14 +86,14 @@ jobs:
         done
       shell: bash
 
-    # 无Ubuntu系统，暂时不知道Ubuntu版本下打包的可执行文件是什么格式、是否可用
-    # - name: Rename artifacts with OS prefix (Ubuntu)
-    #   if: matrix.os == 'ubuntu-latest'
-    #   run: |
-    #     for file in dist/*; do
-    #       mv "$file" "dist/${{ runner.os }}_$(basename "$file")"
-    #     done
-    #   shell: bash
+    # 无Ubuntu系统，暂时不知道Ubuntu版本下打包的可执行文件是否可用
+    - name: Rename artifacts with OS prefix (Ubuntu)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        for file in dist/*; do
+          mv "$file" "dist/${{ runner.os }}_$(basename "$file")"
+        done
+      shell: bash
 
     - name: Rename artifacts with OS prefix (Windows)
       if: matrix.os == 'windows-latest'
